Added model_trainer and completed major update of project

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,5 +12,11 @@ data_ingestion:
 
 data_transformation:
   root_dir: artifacts/data_transformation
-  data_path: artifacts/data_ingestion/legal_data
-  tokenizer_name: nsi319/legal-led-base-16384
+  data_path: artifacts/data_ingestion/alpaca_data
+  tokenizer_name: unsloth/zephyr-sft-bnb-4bit
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  data_path: artifacts/data_ingestion/data_transformation
+  model_ckpt: Feluda/zephyr-sft-bnb-4bit-QnA
+  
