--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,11 @@ PyYAML
 matplotlib
 torch
 notebook
-fastapi==0.78.0
-uvicorn==0.18.3
-Jinja2==3.1.3
-ensure==1.0.2
-python-box==6.0.2
+fastapi
+uvicorn
+Jinja2
+ensure
+python-box
 trl
 langchain
 langchain-community
