--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,77 +1,51 @@
-name: workflow
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy container app to Azure Web App - DocQnA
 
 on:
- push:
+  push:
     branches:
       - main
-    paths-ignore:
-      - 'README.md'
-
-permissions:
- id-token: write
- contents: read
+  workflow_dispatch:
 
 jobs:
- integration:
-    name: Continuous Integration
+  build:
+    runs-on: 'ubuntu-latest'
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Log in to registry
+      uses: docker/login-action@v2
+      with:
+        registry: https://DocQnA.azurecr.io/
+        username: ${{ secrets.AzureAppService_ContainerUsername_94025f5aed8b4af1922da4db3047fe61 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_171b23b6a8f14e33a75f36c6dfd6802a }}
+
+    - name: Build and push container image to registry
+      uses: docker/build-push-action@v3
+      with:
+        push: true
+        tags: DocQnA.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_94025f5aed8b4af1922da4db3047fe61 }}/chicken:${{ github.sha }}
+        file: ./Dockerfile
+
+  deploy:
     runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Lint code
-        run: echo "Linking repository"
-
-      - name: Run unit tests
-        run: echo "Running unit tests"
-
- build-and-push-acr-image:
-    name: Continuous Delivery
-    needs: integration
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Install Utilities
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq unzip
-
-      - name: Login to Azure Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ secrets.ACR_REGISTRY }}
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
-
-      - name: Build, tag, and push image to Azure Container Registry
-        run: |
-          docker build -t ${{ secrets.ACR_REGISTRY }}/your-image-name:latest .
-          docker push ${{ secrets.ACR_REGISTRY }}/your-image-name:latest
-
- Continuous-Deployment:
-    needs: build-and-push-acr-image
-    runs-on: self-hosted
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Login to Azure Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ secrets.ACR_REGISTRY }}
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
-
-      - name: Pull latest images
-        run: |
-          docker pull ${{ secrets.ACR_REGISTRY }}/your-image-name:latest
-
-      - name: Run Docker Image to serve users
-        run: |
-          docker run -d -p 80:80 --name=Dock_QnA ${{ secrets.ACR_REGISTRY }}/your-image-name:latest
-
-      - name: Clean previous images and containers
-        run: |
-          docker system prune -f
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'DocQnA'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_bc7f25129a214516999e2f1cb58abd30 }}
+        images: 'chickenapp.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_94025f5aed8b4af1922da4db3047fe61 }}/chicken:${{ github.sha }}'
