--- a/.github/workflows/main_dockyqna.yml
+++ b/.github/workflows/main_dockyqna.yml
@@ -1,16 +1,13 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy container app to Azure Web App - dockyqna
 
 on:
-  push:
+ push:
     branches:
       - main
-  workflow_dispatch:
+ workflow_dispatch:
 
 jobs:
-  build:
+ build:
     runs-on: 'ubuntu-latest'
 
     steps:
@@ -23,17 +20,17 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://docqna.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_85151a52ae6c41c2867ccdbd39400bc3 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_3ae04f88a371401e830456fb1eff75f8 }}
+        username: ${{ secrets.AzureAppService_ContainerUsername }}
+        password: ${{ secrets.AzureAppService_ContainerPassword }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: docqna.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_85151a52ae6c41c2867ccdbd39400bc3 }}/docqna:${{ github.sha }}
+        tags: docqna.azurecr.io/docqna:${{ github.sha }}
         file: ./Dockerfile
 
-  deploy:
+ deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -47,5 +44,5 @@ jobs:
       with:
         app-name: 'dockyqna'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_88800cb3e5af4c09a66486dd55675771 }}
-        images: 'docqna.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_85151a52ae6c41c2867ccdbd39400bc3 }}/docqna:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile }}
+        images: 'docqna.azurecr.io/docqna:${{ github.sha }}'
