--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy container app to Azure Web App - DocQnA
+name: Build and deploy container app to Azure Web App - dockyqna
 
 on:
   push:
@@ -22,15 +22,15 @@ jobs:
     - name: Log in to registry
       uses: docker/login-action@v2
       with:
-        registry: https://DocQnA.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_94025f5aed8b4af1922da4db3047fe61 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_171b23b6a8f14e33a75f36c6dfd6802a }}
+        registry: https://docqna.azurecr.io/
+        username: ${{ secrets.AzureAppService_ContainerUsername_85151a52ae6c41c2867ccdbd39400bc3 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_3ae04f88a371401e830456fb1eff75f8 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: DocQnA.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_94025f5aed8b4af1922da4db3047fe61 }}/chicken:${{ github.sha }}
+        tags: docqna.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_85151a52ae6c41c2867ccdbd39400bc3 }}/docqna:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -45,7 +45,7 @@ jobs:
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'DocQnA'
+        app-name: 'dockyqna'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_bc7f25129a214516999e2f1cb58abd30 }}
-        images: 'chickenapp.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_94025f5aed8b4af1922da4db3047fe61 }}/chicken:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_88800cb3e5af4c09a66486dd55675771 }}
+        images: 'docqna.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_85151a52ae6c41c2867ccdbd39400bc3 }}/docqna:${{ github.sha }}'
